# cocoandroid

./: .gitignore  CMakeLists.txt  gradle.properties  settings.gradle
Classes/: AppDelegate.cpp  Caretaker.cpp  Caretaker.h  HaowanLibScene.cpp  HaowanLibScene.h  HelloWorldScene.cpp  JsonUtils.cpp  JsonUtils.h  LayerManager.cpp  LayerManager.h  coclog.h
app/: AndroidManifest.xml  build.gradle
app/jni/: Android.mk
cocos2d/: AUTHORS  CHANGELOG
cocos2d/cocos/: cocos2d.h
cocos2d/cocos/2d/: CCDrawLayer.cpp  CCDrawLayer.h  CCDrawNode.cpp  CCDrawNode.h  CCNode.cpp  CCNode.h
cocos2d/cocos/base/: CCDirector.cpp
cocos2d/cocos/deprecated/: CCDeprecated.h
cocos2d/cocos/network/: CCDownloader-android.cpp  HttpClient-android.cpp
cocos2d/cocos/physics/: CCPhysicsWorld.cpp  CCPhysicsWorld.h
cocos2d/cocos/platform/android/: CCApplication-android.cpp
cocos2d/cocos/platform/android/jni/: Java_org_cocos2dx_lib_Cocos2dxEngineDataManager.cpp
cocos2d/cocos/ui/: UILayout.cpp  UILayout.h  UIScale9Sprite.cpp  UIScale9Sprite.h  UIVideoPlayer-android.cpp  UIVideoPlayer-ios.mm  UIVideoPlayer-tizen.cpp  UIVideoPlayer.h
cocos2d/cocos/vr/: CCVRGenericHeadTracker.cpp
cocos2d/extensions/physics-nodes/: CCPhysicsDebugNode.h
libcocos2dx/: build.gradle
libcocos2dx/src/main/cpp/: Java_org_cocos2dx_lib_Cocos2dxAccelerometer.cpp  Java_org_cocos2dx_lib_Cocos2dxEngineDataManager.cpp  Java_org_cocos2dx_lib_Cocos2dxRenderer.cpp  ProcessCpuTracker.cpp  javaactivity-android.cpp
proj.android/: CMakeLists.txt  settings.gradle
proj.android/app/: build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/haowanlib.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: haowanlib.sln
